# EDM

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  wsgi.py
EDM/: 123.py  __init__.py  add_counterparty_form.py  add_items_utd_form.py  add_text_contract_form.py  add_user_form.py  add_user_role_form.py  admin.py  auth.py  counterparties.py  create_contract_form.py  create_utd_form.py  dashboard.py  databae.py  document_create_select_type_form.py  documents.py  login_form.py  register_form.py  schema.sql  seed.sql  tin_form.py
EDM/config/: dev_config.py  prod_config.py  test_config.py
EDM/static/css/: _header.css  _navbar.css  add_items_utd.css  add_text_contract.css  add_user.css  counterparties.css  create_contract.css  create_document.css  create_utd_document.css  getting_start.css  incoming.css  login.css  outcoming_docs.css  register.css  register_requests.css  style.css  view_contract.css  view_utd.css
EDM/templates/: _formhelpers.html.jinja  _header.html.jinja  _navbar.html.jinja  base.html.jinja  index.html.jinja
EDM/templates/admin/: add_counterparty.html.jinja  add_user.html.jinja  complete_reg_req.html.jinja  index.html.jinja  register_requests.html.jinja
EDM/templates/auth/: getting_start.html.jinja  login.html.jinja  register.html.jinja
EDM/templates/counterparties/: index.html.jinja
EDM/templates/documents/: add_items_utd.html.jinja  add_text_contract.html.jinja  contract_view.html.jinja  create.html.jinja  create_contract.html.jinja  create_utd.html.jinja  edit_contract.html.jinja  edit_utd.html.jinja  (+4 more)
(+1 files in other folders)
